[package]
name = "percy"
version = "0.1.0"
authors = ["Rahul D. Ghosal <rdghosal@gmail.com>"]
edition = "2021"
repository = "https://github.com/rdghosal/percy/"
license = "MIT"
license-file = "LICENSE.txt"
keywords = ["uml", "mermaid", "pydantic", "python", "transpiler", "codegen"]
categories = ["command-line-interface", "development-tools"]
exclude = [
    "examples/*",
    "tests/*",
    "test.*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "percy"

[dependencies]
