[package]
name = "nereus"
description = "Library and executable to generate a mermaid class diagram (.mmd) from pydantic class definitions (.py files)."
version = "0.2.3"
authors = ["Rahul D. Ghosal <rdghosal@gmail.com>"]
edition = "2021"
repository = "https://github.com/rdghosal/nereus/"
license-file = "LICENSE"
keywords = ["uml", "mermaid", "pydantic", "python", "codegen"]
categories = ["command-line-interface", "development-tools"]
exclude = [
    "examples/*",
    "tests/*",
    "test.*",
    ".gitignore",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "nereus"

[dependencies]
